--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -5,9 +5,13 @@
     <link rel="stylesheet" href="static/css/main.css" />
   </head>
   <body>
+    {% include "includes/nav.html" %}
     <h3>Hello everyone!</h3>
     <p>This is a test Flask application.</p>
-
-    {% include "includes/footer.html" %}
+    {% if login %}
+    <h3>Let's get started.</h3>
+    {% else %}
+    <p>Already registered? <a href="{{url_for('login')}}">Login</a></p>
+    {% endif %} {% include "includes/footer.html" %}
   </body>
 </html>
