--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="static/css/main.css" />
-  </head>
-  <body>
-    {% include "includes/nav.html" %}
-    <h3>Hello everyone!</h3>
-    <p>This is a test Flask application.</p>
-    {% if login %}
-    <h3>Let's get started.</h3>
-    {% else %}
-    <p>Already registered? <a href="{{url_for('login')}}">Login</a></p>
-    {% endif %} {% include "includes/footer.html" %}
-  </body>
-</html>
+<!-- Specify which template to insert the content of this template -->
+{% extends "layout.html" %}
+
+<!-- Define the content inside the 'content' block -->
+{% block content %}
+<h3>Hello everyone!</h3>
+<p>This is a test Flask application.</p>
+<!-- Start of if/else logic -->
+{% if login %}
+<h3>Let's get started.</h3>
+{% else %}
+<p>Already registered? <a href="{{url_for('login')}}">Login</a></p>
+{% endif %}
+<!-- End of if/else -->
+{% endblock %}
+<!-- End of the block definition -->
