Creating child templates

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -3,8 +3,7 @@
 
 <!-- Define the content inside the 'content' block -->
 {% block content %}
-<h3>Hello everyone!</h3>
-<p>This is a test Flask application.</p>
+<h3>Welcome to Universal Tech Academy</h3>
 <!-- Start of if/else logic -->
 {% if login %}
 <h3>Let's get started.</h3>
