fix comment bug in HTML template

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -9,7 +9,7 @@
     <!-- Define where to insert another template's block content -->
     {% block content %} {% endblock %}
     <!-- Reuse block -->
-    <!-- {{ self.content() }} -->
+    <!-- \{\{ self.content() \}\} -->
 
     <!-- End of template insert -->
     {% include "includes/footer.html" %}
