--- a/application/static/css/main.css
+++ b/application/static/css/main.css
@@ -2,3 +2,22 @@ body {
   background-color: azure;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+ul > li {
+  display: inline-block;
+  margin: 10px;
+}
+ul > li .active {
+  background-color: cornflowerblue;
+  color: aliceblue;
+  font-weight: 700;
+}
+ul > li > a {
+  padding: 10px 20px;
+  text-decoration: none;
+}
