--- a/application/templates/courses.html
+++ b/application/templates/courses.html
@@ -26,7 +26,13 @@
         <td>{{ data["credits"] }}</td>
         <td>{{ data["term"] }}</td>
         <td>
-          <button>Enroll</button>
+          <form action="{{url_for('enrollment')}}" method="GET">
+            <input type="hidden" name="courseID" value="{{data['courseID']}}" />
+            <input type="hidden" name="title" value="{{data['title']}}" />
+            <input type="hidden" name="term" value="{{data['term']}}" />
+
+            <button>Enroll</button>
+          </form>
         </td>
       </tr>
       {% endfor %}
